css/main.css
@font-face {
  font-family: Geist Mono;
  font-weight: 100;
  src: url("https://pham.codes/d/GeistMonoVF.woff2");
}

@font-face {
  font-family: Geist;
  font-weight: 100;
  src: url("https://pham.codes/d/GeistVF.woff2");
}

body {
  text-rendering: optimizeLegibility;
  font-family: Geist, sans-serif;
  font-size: 16px;
  background: black;
}
code {
  font-family:
    Geist Mono,
    monospace;
}
* {
  @apply transition-all;
}
::selection {
  @apply bg-teal-200 text-black;
}

